--- a/bibfiles/V374Peg.bib
+++ b/bibfiles/V374Peg.bib
@@ -1,3 +1,23 @@
+@ARTICLE{Vidotto_2011MNRAS.412..351V,
+       author = {{Vidotto}, A.~A. and {Jardine}, M. and {Opher}, M. and {Donati}, J.~F. and {Gombosi}, T.~I.},
+        title = "{Powerful winds from low-mass stars: V374 Peg}",
+      journal = {\mnras},
+     keywords = {MHD, methods: numerical, stars: individual: V374 Peg, stars: low-mass, stars: magnetic field, stars: winds, outflows, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Earth and Planetary Astrophysics},
+         year = 2011,
+        month = mar,
+       volume = {412},
+       number = {1},
+        pages = {351-362},
+          doi = {10.1111/j.1365-2966.2010.17908.x},
+archivePrefix = {arXiv},
+       eprint = {1010.4762},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2011MNRAS.412..351V},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @INPROCEEDINGS{Hallinan_2009AIPC.1094..146H,
        author = {{Hallinan}, Gregg and {Doyle}, Gerry and {Antonova}, Antoaneta and {Bourke}, Stephen and {Jardine}, Moira and {Donati}, J. -F. and {Morin}, Julien and {Golden}, Aaron},
         title = "{Mapping the Radio Coronae of Cool Stars and Brown Dwarfs}",
