--- a/bibfiles/StellarTechniques.bib
+++ b/bibfiles/StellarTechniques.bib
@@ -1,3 +1,20 @@
+@ARTICLE{Treumann_2006A&ARv..13..229T,
+       author = {{Treumann}, Rudolf A.},
+        title = "{The electron-cyclotron maser for astrophysical application}",
+      journal = {\aapr},
+     keywords = {Electron-cyclotron maser, Non-thermal radiation, Coherent radiation, Radio emissions from magnetized planets, Auroral kilometric radiation, Jupiter radio bursts, Solar radio bursts/spikes, Coherent radiation from stars, Coherent radiation from Blazar jets, Electron{\textendash}cyclotron maser},
+         year = 2006,
+        month = aug,
+       volume = {13},
+       number = {4},
+        pages = {229-315},
+          doi = {10.1007/s00159-006-0001-y},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2006A&ARv..13..229T},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{vanBallegooijen_2000ApJ...539..983V,
        author = {{van Ballegooijen}, A.~A. and {Priest}, E.~R. and {Mackay}, D.~H.},
         title = "{Mean Field Model for the Formation of Filament Channels on the Sun}",
