--- a/bibfiles/StellarProperties.bib
+++ b/bibfiles/StellarProperties.bib
@@ -1,3 +1,24 @@
+@ARTICLE{Villadsen_2019ApJ...871..214V,
+       author = {{Villadsen}, Jackie and {Hallinan}, Gregg},
+        title = "{Ultra-wideband Detection of 22 Coherent Radio Bursts on M Dwarfs}",
+      journal = {\apj},
+     keywords = {stars: coronae, stars: flare, radio continuum: stars, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2019,
+        month = feb,
+       volume = {871},
+       number = {2},
+          eid = {214},
+        pages = {214},
+          doi = {10.3847/1538-4357/aaf88e},
+archivePrefix = {arXiv},
+       eprint = {1810.00855},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019ApJ...871..214V},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{Montes_2001MNRAS.328...45M,
        author = {{Montes}, D. and {L{\'o}pez-Santiago}, J. and {G{\'a}lvez}, M.~C. and {Fern{\'a}ndez-Figueroa}, M.~J. and {De Castro}, E. and {Cornide}, M.},
         title = "{Late-type members of young stellar kinematic groups - I. Single stars}",
