--- a/bibfiles/StellarProperties.bib
+++ b/bibfiles/StellarProperties.bib
@@ -1,3 +1,19 @@
+@ARTICLE{Reid_1995AJ....110.1838R,
+       author = {{Reid}, I. Neill and {Hawley}, Suzanne L. and {Gizis}, John E.},
+        title = "{The Palomar/MSU Nearby-Star Spectroscopic Survey. I. The Northern M Dwarfs -Bandstrengths and Kinematics}",
+      journal = {\aj},
+     keywords = {STARS: FUNDAMENTAL PARAMETERS, SURVEYS, STARS: PECULIAR, STARS: LUMINOSITY FUNCTION},
+         year = 1995,
+        month = oct,
+       volume = {110},
+        pages = {1838},
+          doi = {10.1086/117655},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1995AJ....110.1838R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{Villadsen_2019ApJ...871..214V,
        author = {{Villadsen}, Jackie and {Hallinan}, Gregg},
         title = "{Ultra-wideband Detection of 22 Coherent Radio Bursts on M Dwarfs}",
