--- a/bibfiles/V374Peg.bib
+++ b/bibfiles/V374Peg.bib
@@ -1,3 +1,18 @@
+@ARTICLE{Greimel_1998IBVS.4652....1G,
+       author = {{Greimel}, R. and {Robb}, R.~M.},
+        title = "{Flares Discovered on 1RXS J220111+281849}",
+      journal = {Information Bulletin on Variable Stars},
+     keywords = {stars: activity},
+         year = 1998,
+        month = dec,
+       volume = {4652},
+        pages = {1},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1998IBVS.4652....1G},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{Vidotto_2011MNRAS.412..351V,
        author = {{Vidotto}, A.~A. and {Jardine}, M. and {Opher}, M. and {Donati}, J.~F. and {Gombosi}, T.~I.},
         title = "{Powerful winds from low-mass stars: V374 Peg}",
