--- a/bibfiles/StellarTechniques.bib
+++ b/bibfiles/StellarTechniques.bib
@@ -1,3 +1,19 @@
+@ARTICLE{Melrose_1982ApJ...259..844M,
+       author = {{Melrose}, D.~B. and {Dulk}, G.~A.},
+        title = "{Electron-cyclotron masers as the source of certain solar and stellar radio bursts.}",
+      journal = {\apj},
+     keywords = {Masers, Radio Astronomy, Solar Radio Emission, Stellar Radiation, Angular Distribution, Circular Polarization, Electrons, Gyromagnetism, Plasma Waves, Solar Radio Bursts, Astrophysics},
+         year = 1982,
+        month = aug,
+       volume = {259},
+        pages = {844-858},
+          doi = {10.1086/160219},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1982ApJ...259..844M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{Treumann_2006A&ARv..13..229T,
        author = {{Treumann}, Rudolf A.},
         title = "{The electron-cyclotron maser for astrophysical application}",
