--- a/bibfiles/StellarProperties.bib
+++ b/bibfiles/StellarProperties.bib
@@ -1,3 +1,43 @@
+@ARTICLE{Delorme_2011MNRAS.413.2218D,
+       author = {{Delorme}, P. and {Collier Cameron}, A. and {Hebb}, L. and {Rostron}, J. and {Lister}, T.~A. and {Norton}, A.~J. and {Pollacco}, D. and {West}, R.~G.},
+        title = "{Stellar rotation in the Hyades and Praesepe: gyrochronology and braking time-scale}",
+      journal = {\mnras},
+     keywords = {techniques: photometric, surveys, stars: rotation, open clusters and associations: individual: Hyades, Praesepe, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2011,
+        month = may,
+       volume = {413},
+       number = {3},
+        pages = {2218-2234},
+          doi = {10.1111/j.1365-2966.2011.18299.x},
+archivePrefix = {arXiv},
+       eprint = {1101.1222},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2011MNRAS.413.2218D},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Vidotto_2014MNRAS.441.2361V,
+       author = {{Vidotto}, A.~A. and {Gregory}, S.~G. and {Jardine}, M. and {Donati}, J.~F. and {Petit}, P. and {Morin}, J. and {Folsom}, C.~P. and {Bouvier}, J. and {Cameron}, A.~C. and {Hussain}, G. and {Marsden}, S. and {Waite}, I.~A. and {Fares}, R. and {Jeffers}, S. and {do Nascimento}, J.~D.},
+        title = "{Stellar magnetism: empirical trends with age and rotation}",
+      journal = {\mnras},
+     keywords = {techniques: polarimetric, stars: activity, stars: evolution, stars: magnetic field, planetary systems, stars: rotation, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Earth and Planetary Astrophysics},
+         year = 2014,
+        month = jul,
+       volume = {441},
+       number = {3},
+        pages = {2361-2374},
+          doi = {10.1093/mnras/stu728},
+archivePrefix = {arXiv},
+       eprint = {1404.2733},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2014MNRAS.441.2361V},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{Reid_1995AJ....110.1838R,
        author = {{Reid}, I. Neill and {Hawley}, Suzanne L. and {Gizis}, John E.},
         title = "{The Palomar/MSU Nearby-Star Spectroscopic Survey. I. The Northern M Dwarfs -Bandstrengths and Kinematics}",
