--- a/bibfiles/StellarTechniques.bib
+++ b/bibfiles/StellarTechniques.bib
@@ -1,3 +1,23 @@
+@ARTICLE{Barnes_2003ApJ...586..464B,
+       author = {{Barnes}, Sydney A.},
+        title = "{On the Rotational Evolution of Solar- and Late-Type Stars, Its Magnetic Origins, and the Possibility of Stellar Gyrochronology}",
+      journal = {\apj},
+     keywords = {Galaxy: Open Clusters and Associations: General, Stars: Evolution, Stars: Interiors, Stars: Late-Type, Stars: Magnetic Fields, Stars: Rotation, Astrophysics},
+         year = 2003,
+        month = mar,
+       volume = {586},
+       number = {1},
+        pages = {464-479},
+          doi = {10.1086/367639},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0303631},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2003ApJ...586..464B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{Melrose_1982ApJ...259..844M,
        author = {{Melrose}, D.~B. and {Dulk}, G.~A.},
         title = "{Electron-cyclotron masers as the source of certain solar and stellar radio bursts.}",
