--- a/bibfiles/StellarProperties.bib
+++ b/bibfiles/StellarProperties.bib
@@ -1,3 +1,20 @@
+@ARTICLE{McIvor_2006MNRAS.367..592M,
+       author = {{McIvor}, T. and {Jardine}, M. and {Mackay}, D. and {Holzwarth}, V.},
+        title = "{Simulated X-ray cycles in rapidly rotating solar-like stars}",
+      journal = {\mnras},
+     keywords = {stars: activity, stars: coronae, stars: late-type, stars: magnetic fields, stars: rotation, X-rays: stars},
+         year = 2006,
+        month = apr,
+       volume = {367},
+       number = {2},
+        pages = {592-598},
+          doi = {10.1111/j.1365-2966.2006.09958.x},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2006MNRAS.367..592M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{Delorme_2011MNRAS.413.2218D,
        author = {{Delorme}, P. and {Collier Cameron}, A. and {Hebb}, L. and {Rostron}, J. and {Lister}, T.~A. and {Norton}, A.~J. and {Pollacco}, D. and {West}, R.~G.},
         title = "{Stellar rotation in the Hyades and Praesepe: gyrochronology and braking time-scale}",
