--- a/bibfiles/Reference.bib
+++ b/bibfiles/Reference.bib
@@ -1,3 +1,23 @@
+@ARTICLE{vanHoof_2014MNRAS.444..420V,
+       author = {{van Hoof}, P.~A.~M. and {Williams}, R.~J.~R. and {Volk}, K. and {Chatzikos}, M. and {Ferland}, G.~J. and {Lykins}, M. and {Porter}, R.~L. and {Wang}, Y.},
+        title = "{Accurate determination of the free-free Gaunt factor - I. Non-relativistic Gaunt factors}",
+      journal = {\mnras},
+     keywords = {atomic data, plasmas, radiation mechanisms: thermal, ISM: general, radio continuum: general, Astrophysics - High Energy Astrophysical Phenomena, Physics - Accelerator Physics, Physics - Atomic Physics, Physics - Plasma Physics, Physics - Space Physics},
+         year = 2014,
+        month = oct,
+       volume = {444},
+       number = {1},
+        pages = {420-428},
+          doi = {10.1093/mnras/stu1438},
+archivePrefix = {arXiv},
+       eprint = {1407.5048},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2014MNRAS.444..420V},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{Hartmann_1985SoPh..100..587H,
        author = {{Hartmann}, L.},
         title = "{Mass Loss from Solar-Type Stars}",
