--- a/bibfiles/StellarProperties.bib
+++ b/bibfiles/StellarProperties.bib
@@ -1,3 +1,23 @@
+@ARTICLE{Donati_2008MNRAS.390..545D,
+       author = {{Donati}, J. -F. and {Morin}, J. and {Petit}, P. and {Delfosse}, X. and {Forveille}, T. and {Auri{\`e}re}, M. and {Cabanac}, R. and {Dintrans}, B. and {Fares}, R. and {Gastine}, T. and {Jardine}, M.~M. and {Ligni{\`e}res}, F. and {Paletou}, F. and {Ramirez Velez}, J.~C. and {Th{\'e}ado}, S.},
+        title = "{Large-scale magnetic topologies of early M dwarfs}",
+      journal = {\mnras},
+     keywords = {techniques: polarimetric, stars: activity, stars: magnetic fields, stars: low-mass, brown dwarfs, stars: rotation, Astrophysics},
+         year = 2008,
+        month = oct,
+       volume = {390},
+       number = {2},
+        pages = {545-560},
+          doi = {10.1111/j.1365-2966.2008.13799.x},
+archivePrefix = {arXiv},
+       eprint = {0809.0269},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2008MNRAS.390..545D},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{McIvor_2006MNRAS.367..592M,
        author = {{McIvor}, T. and {Jardine}, M. and {Mackay}, D. and {Holzwarth}, V.},
         title = "{Simulated X-ray cycles in rapidly rotating solar-like stars}",
