--- a/bibfiles/Solar.bib
+++ b/bibfiles/Solar.bib
@@ -1,3 +1,19 @@
+@ARTICLE{MacKinnon_1992A&A...256..613M,
+       author = {{MacKinnon}, A. and {Vlahos}, L. and {Vilmer}, N.},
+        title = "{On the efficiency of electron cyclotron maser instability in solar flares}",
+      journal = {\aap},
+     keywords = {Electron Cyclotron Heating, Masers, Solar Flares, Stellar Models, Computational Astrophysics, Coronal Loops, Electron Energy, Solar X-Rays, Solar Physics},
+         year = 1992,
+        month = mar,
+       volume = {256},
+       number = {2},
+        pages = {613-617},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1992A&A...256..613M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{Hale_1908ApJ....28..315H,
        author = {{Hale}, George E.},
         title = "{On the Probable Existence of a Magnetic Field in Sun-Spots}",
