--- a/bibfiles/StellarAtmospheres.bib
+++ b/bibfiles/StellarAtmospheres.bib
@@ -1,3 +1,23 @@
+@ARTICLE{Johnstone_2010MNRAS.404..101J,
+       author = {{Johnstone}, C. and {Jardine}, M. and {Mackay}, D.~H.},
+        title = "{Modelling stellar coronae from surface magnetograms: the role of missing magnetic flux}",
+      journal = {\mnras},
+     keywords = {stars: coronae, stars: magnetic field, stars: starspots, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2010,
+        month = may,
+       volume = {404},
+       number = {1},
+        pages = {101-109},
+          doi = {10.1111/j.1365-2966.2010.16298.x},
+archivePrefix = {arXiv},
+       eprint = {1001.2526},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2010MNRAS.404..101J},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{Isik_2023SSRv..219...70I,
        author = {{I{\c{s}}{\i}k}, Emre and {van Saders}, Jennifer L. and {Reiners}, Ansgar and {Metcalfe}, Travis S.},
         title = "{Scaling and Evolution of Stellar Magnetic Activity}",
