--- a/bibfiles/Solar.bib
+++ b/bibfiles/Solar.bib
@@ -1,3 +1,20 @@
+@ARTICLE{Mackay_1999SoPh..185...87M,
+       author = {{Mackay}, D.~H. and {Longbottom}, A.~W. and {Priest}, E.~R.},
+        title = "{Dipped Magnetic Field Configurations Associated with Filaments and Barbs}",
+      journal = {\solphys},
+     keywords = {Field Line, Barb, Normal Polarity, Field Configuration, Polarity Inversion Line},
+         year = 1999,
+        month = mar,
+       volume = {185},
+       number = {1},
+        pages = {87-112},
+          doi = {10.1023/A:1005149415381},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1999SoPh..185...87M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{MacKinnon_1992A&A...256..613M,
        author = {{MacKinnon}, A. and {Vlahos}, L. and {Vilmer}, N.},
         title = "{On the efficiency of electron cyclotron maser instability in solar flares}",
