--- a/bibfiles/Reference.bib
+++ b/bibfiles/Reference.bib
@@ -1,3 +1,13 @@
+@BOOK{Lamers_1999isw..book.....L,
+       author = {{Lamers}, Henny J.~G.~L.~M. and {Cassinelli}, Joseph P.},
+        title = "{Introduction to Stellar Winds}",
+         year = 1999,
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1999isw..book.....L},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{McConville_2008PPCF...50g4010M,
        author = {{McConville}, S.~L. and {Speirs}, D.~C. and {Ronald}, K. and {Phelps}, A.~D.~R. and {Cross}, A.~W. and {Bingham}, R. and {Robertson}, C.~W. and {Whyte}, C.~G. and {He}, W. and {Gillespie}, K.~M. and {Vorgul}, I. and {Cairns}, R.~A. and {Kellett}, B.~J.},
         title = "{Demonstration of auroral radio emission mechanisms by laboratory experiment}",
