--- a/bibfiles/StellarTechniques.bib
+++ b/bibfiles/StellarTechniques.bib
@@ -1,3 +1,16 @@
+@PHDTHESIS{Cartledge_1996PhDT.......103C,
+       author = {{Cartledge}, Nicholas P.},
+        title = "{External and internal magnetohydrostatic models of quiescent solar prominences}",
+     keywords = {Astronomy},
+       school = {Saint Andrews University, UK},
+         year = 1996,
+        month = dec,
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1996PhDT.......103C},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{Barnes_2003ApJ...586..464B,
        author = {{Barnes}, Sydney A.},
         title = "{On the Rotational Evolution of Solar- and Late-Type Stars, Its Magnetic Origins, and the Possibility of Stellar Gyrochronology}",
