--- a/bibfiles/Reference.bib
+++ b/bibfiles/Reference.bib
@@ -3,7 +3,9 @@
         title = "{Introduction to Stellar Winds}",
          year = 1999,
        adsurl = {https://ui.adsabs.harvard.edu/abs/1999isw..book.....L},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+     publisher = {Cambridge University Press},
+      address = {Cambridge, UK}
 }
 
 
