--- a/bibfiles/Solar.bib
+++ b/bibfiles/Solar.bib
@@ -1,3 +1,24 @@
+@ARTICLE{Habbal_2021ApJ...911L...4H,
+       author = {{Habbal}, Shadia R. and {Druckm{\"u}ller}, Miloslav and {Alzate}, Nathalia and {Ding}, Adalbert and {Johnson}, Judd and {Starha}, Pavel and {Hoderova}, Jana and {Boe}, Benjamin and {Constantinou}, Sage and {Arndt}, Martina},
+        title = "{Identifying the Coronal Source Regions of Solar Wind Streams from Total Solar Eclipse Observations and in situ Measurements Extending over a Solar Cycle}",
+      journal = {\apjl},
+     keywords = {Solar prominences, Solar cycle, Solar wind, Total eclipses, Solar coronal streamers, Solar magnetic fields, Solar coronal heating, Solar coronal mass ejections, Solar corona, 1519, 1487, 1534, 1704, 1486, 1503, 1989, 310, 1483, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2021,
+        month = apr,
+       volume = {911},
+       number = {1},
+          eid = {L4},
+        pages = {L4},
+          doi = {10.3847/2041-8213/abe775},
+archivePrefix = {arXiv},
+       eprint = {2103.02128},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021ApJ...911L...4H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{Mackay_1999SoPh..185...87M,
        author = {{Mackay}, D.~H. and {Longbottom}, A.~W. and {Priest}, E.~R.},
         title = "{Dipped Magnetic Field Configurations Associated with Filaments and Barbs}",
