--- a/bibfiles/StellarProperties.bib
+++ b/bibfiles/StellarProperties.bib
@@ -1,3 +1,20 @@
+@ARTICLE{Koen_2010MNRAS.403.1949K,
+       author = {{Koen}, C. and {Kilkenny}, D. and {van Wyk}, F. and {Marang}, F.},
+        title = "{UBV(RI)$_{C}$ JHK observations of Hipparcos-selected nearby stars}",
+      journal = {\mnras},
+     keywords = {stars: distances, stars: fundamental parameters},
+         year = 2010,
+        month = apr,
+       volume = {403},
+       number = {4},
+        pages = {1949-1968},
+          doi = {10.1111/j.1365-2966.2009.16182.x},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2010MNRAS.403.1949K},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{Donati_2008MNRAS.390..545D,
        author = {{Donati}, J. -F. and {Morin}, J. and {Petit}, P. and {Delfosse}, X. and {Forveille}, T. and {Auri{\`e}re}, M. and {Cabanac}, R. and {Dintrans}, B. and {Fares}, R. and {Gastine}, T. and {Jardine}, M.~M. and {Ligni{\`e}res}, F. and {Paletou}, F. and {Ramirez Velez}, J.~C. and {Th{\'e}ado}, S.},
         title = "{Large-scale magnetic topologies of early M dwarfs}",
