--- a/bibfiles/StellarProperties.bib
+++ b/bibfiles/StellarProperties.bib
@@ -1,3 +1,23 @@
+@ARTICLE{Maggio_2005ApJ...622L..57M,
+       author = {{Maggio}, A. and {Ness}, J. -U.},
+        title = "{Spectral Indications of Density Variability in the Corona of AD Leonis}",
+      journal = {\apjl},
+     keywords = {Stars: Activity, Stars: Coronae, Stars: Individual: Constellation Name: AD Leonis, Stars: Late-Type, X-Rays: Stars, Astrophysics},
+         year = 2005,
+        month = mar,
+       volume = {622},
+       number = {1},
+        pages = {L57-L60},
+          doi = {10.1086/429487},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0502379},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2005ApJ...622L..57M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{Koen_2010MNRAS.403.1949K,
        author = {{Koen}, C. and {Kilkenny}, D. and {van Wyk}, F. and {Marang}, F.},
         title = "{UBV(RI)$_{C}$ JHK observations of Hipparcos-selected nearby stars}",
