--- a/bibfiles/StellarAtmospheres.bib
+++ b/bibfiles/StellarAtmospheres.bib
@@ -1,3 +1,44 @@
+@ARTICLE{Kao_2016ApJ...818...24K,
+       author = {{Kao}, Melodie M. and {Hallinan}, Gregg and {Pineda}, J. Sebastian and {Escala}, Ivanna and {Burgasser}, Adam and {Bourke}, Stephen and {Stevenson}, David},
+        title = "{Auroral Radio Emission from Late L and T Dwarfs: A New Constraint on Dynamo Theory in the Substellar Regime}",
+      journal = {\apj},
+     keywords = {brown dwarfs, planets and satellites: aurorae, planets and satellites: magnetic fields, radio continuum: stars, stars: individual: SIMP J01365662+0933473, stars: magnetic field, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Earth and Planetary Astrophysics},
+         year = 2016,
+        month = feb,
+       volume = {818},
+       number = {1},
+          eid = {24},
+        pages = {24},
+          doi = {10.3847/0004-637X/818/1/24},
+archivePrefix = {arXiv},
+       eprint = {1511.03661},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2016ApJ...818...24K},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Kao_2023Natur.619..272K,
+       author = {{Kao}, Melodie M. and {Mioduszewski}, Amy J. and {Villadsen}, Jackie and {Shkolnik}, Evgenya L.},
+        title = "{Resolved imaging confirms a radiation belt around an ultracool dwarf}",
+      journal = {\nat},
+     keywords = {Astrophysics - Earth and Planetary Astrophysics, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2023,
+        month = jul,
+       volume = {619},
+       number = {7969},
+        pages = {272-275},
+          doi = {10.1038/s41586-023-06138-w},
+archivePrefix = {arXiv},
+       eprint = {2302.12841},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2023Natur.619..272K},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{Johnstone_2010MNRAS.404..101J,
        author = {{Johnstone}, C. and {Jardine}, M. and {Mackay}, D.~H.},
         title = "{Modelling stellar coronae from surface magnetograms: the role of missing magnetic flux}",
