--- a/bibfiles/Solar.bib
+++ b/bibfiles/Solar.bib
@@ -1,3 +1,23 @@
+@ARTICLE{Yashiro_2006ApJ...650L.143Y,
+       author = {{Yashiro}, S. and {Akiyama}, S. and {Gopalswamy}, N. and {Howard}, R.~A.},
+        title = "{Different Power-Law Indices in the Frequency Distributions of Flares with and without Coronal Mass Ejections}",
+      journal = {\apjl},
+     keywords = {Sun: Corona, Sun: Coronal Mass Ejections (CMEs), Sun: Flares, Astrophysics},
+         year = 2006,
+        month = oct,
+       volume = {650},
+       number = {2},
+        pages = {L143-L146},
+          doi = {10.1086/508876},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0609197},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2006ApJ...650L.143Y},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{Habbal_2021ApJ...911L...4H,
        author = {{Habbal}, Shadia R. and {Druckm{\"u}ller}, Miloslav and {Alzate}, Nathalia and {Ding}, Adalbert and {Johnson}, Judd and {Starha}, Pavel and {Hoderova}, Jana and {Boe}, Benjamin and {Constantinou}, Sage and {Arndt}, Martina},
         title = "{Identifying the Coronal Source Regions of Solar Wind Streams from Total Solar Eclipse Observations and in situ Measurements Extending over a Solar Cycle}",
