--- a/bibfiles/StarsAndPlanets.bib
+++ b/bibfiles/StarsAndPlanets.bib
@@ -161,5 +161,6 @@ archivePrefix = {arXiv},
         pages = {26},
           doi = {10.1007/978-3-319-55333-7\_26},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2018haex.bookE..26V},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+    publisher = {Springer International Publishing AG}
 }
