--- a/bibfiles/Brasseur.bib
+++ b/bibfiles/Brasseur.bib
@@ -1,3 +1,13 @@
+@phdthesis{Brasseur_thesis,
+  title        = {Radio Signatures of Magnetic Stellar Coronae},
+  author       = {Clara Eugenia Brasseur},
+  year         = 2025,
+  month        = {May},
+  address      = {St Andrews, UK},
+  note         = {Available at \url{https://doi.org/10.17630/sta/1354}},
+  school       = {University of St Andrews},
+  type         = {PhD thesis}
+}
 
 @ARTICLE{Brasseur_2024MNRAS.530.2442B,
        author = {{Brasseur}, C.~E. and {Jardine}, M.~M. and {Hussain}, G.~A.~J.},
