--- a/bibfiles/Prominences.bib
+++ b/bibfiles/Prominences.bib
@@ -1,3 +1,43 @@
+@ARTICLE{DaleyYates_2023MNRAS.526.1646D,
+       author = {{Daley-Yates}, Simon and {Jardine}, Moira M. and {Johnston}, Craig D.},
+        title = "{Heating and cooling in stellar coronae: coronal rain on a young Sun}",
+      journal = {\mnras},
+     keywords = {Sun: filaments, prominences, stars: activity, stars: coronae, stars: magnetic fields, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2023,
+        month = dec,
+       volume = {526},
+       number = {2},
+        pages = {1646-1656},
+          doi = {10.1093/mnras/stad2752},
+archivePrefix = {arXiv},
+       eprint = {2309.04264},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2023MNRAS.526.1646D},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{DaleyYates_2024MNRAS.534..621D,
+       author = {{Daley-Yates}, S. and {Jardine}, Moira M.},
+        title = "{Simulating stellar coronal rain and slingshot prominences}",
+      journal = {\mnras},
+     keywords = {Astrophysics - Solar and Stellar Astrophysics},
+         year = 2024,
+        month = oct,
+       volume = {534},
+       number = {1},
+        pages = {621-633},
+          doi = {10.1093/mnras/stae2131},
+archivePrefix = {arXiv},
+       eprint = {2409.07297},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2024MNRAS.534..621D},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @INPROCEEDINGS{CollierCameron_2003EAS.....9..217C,
        author = {{Collier Cameron}, A. and {Jardine}, M. and {Wood}, K. and {Donati}, J. -F.},
         title = "{Stellar prominences and coronal magnetic fields}",
