--- a/bibfiles/StellarProperties.bib
+++ b/bibfiles/StellarProperties.bib
@@ -1,3 +1,23 @@
+@ARTICLE{Zarka_2025A&A...695A..95Z,
+       author = {{Zarka}, Philippe and {Louis}, Corentin K. and {Zhang}, Jiale and {Tian}, Hui and {Morin}, Julien and {Gao}, Yang},
+        title = "{Location and energy of electrons producing the radio bursts from AD Leo observed by FAST in December 2021}",
+      journal = {\aap},
+     keywords = {radiation mechanisms: non-thermal, stars: atmospheres, stars: magnetic field, stars: individual: ADLeo, radio continuum: stars, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - High Energy Astrophysical Phenomena},
+         year = 2025,
+        month = mar,
+       volume = {695},
+          eid = {A95},
+        pages = {A95},
+          doi = {10.1051/0004-6361/202450950},
+archivePrefix = {arXiv},
+       eprint = {2501.16180},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025A&A...695A..95Z},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{Maggio_2005ApJ...622L..57M,
        author = {{Maggio}, A. and {Ness}, J. -U.},
         title = "{Spectral Indications of Density Variability in the Corona of AD Leonis}",
