--- a/bibfiles/StarsAndPlanets.bib
+++ b/bibfiles/StarsAndPlanets.bib
@@ -1,3 +1,22 @@
+@ARTICLE{Pineda_2023NatAs...7..569P,
+       author = {{Pineda}, J. Sebastian and {Villadsen}, Jackie},
+        title = "{Coherent radio bursts from known M-dwarf planet-host YZ Ceti}",
+      journal = {Nature Astronomy},
+     keywords = {Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Earth and Planetary Astrophysics},
+         year = 2023,
+        month = may,
+       volume = {7},
+        pages = {569-578},
+          doi = {10.1038/s41550-023-01914-0},
+archivePrefix = {arXiv},
+       eprint = {2304.00031},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2023NatAs...7..569P},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{Vedantham_2020NatAs...4..577V,
        author = {{Vedantham}, H.~K. and {Callingham}, J.~R. and {Shimwell}, T.~W. and {Tasse}, C. and {Pope}, B.~J.~S. and {Bedell}, M. and {Snellen}, I. and {Best}, P. and {Hardcastle}, M.~J. and {Haverkorn}, M. and {Mechev}, A. and {O'Sullivan}, S.~P. and {R{\"o}ttgering}, H.~J.~A. and {White}, G.~J.},
         title = "{Coherent radio emission from a quiescent red dwarf indicative of star-planet interaction}",
