--- a/bibfiles/StellarProperties.bib
+++ b/bibfiles/StellarProperties.bib
@@ -1,3 +1,156 @@
+@INPROCEEDINGS{Kellett_2007mru..confE.106K,
+       author = {{Kellett}, B.},
+        title = "{CU Virginis - A unique stellar pulsar?}",
+    booktitle = {From Planets to Dark Energy: the Modern Radio Universe},
+         year = 2007,
+        month = jan,
+          eid = {106},
+        pages = {106},
+          doi = {10.22323/1.052.0106},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2007mru..confE.106K},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Leto_2006A&A...458..831L,
+       author = {{Leto}, P. and {Trigilio}, C. and {Buemi}, C.~S. and {Umana}, G. and {Leone}, F.},
+        title = "{Stellar magnetosphere reconstruction from radio data. Multi-frequency VLA observations and 3D-simulations of <ASTROBJ>CU Virginis</ASTROBJ>}",
+      journal = {\aap},
+     keywords = {stars: chemically peculiar, stars: circumstellar matter, stars: individual: CU Vir, stars: magnetic fields, radio continuum: stars, Astrophysics},
+         year = 2006,
+        month = nov,
+       volume = {458},
+       number = {3},
+        pages = {831-839},
+          doi = {10.1051/0004-6361:20054511},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0610395},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2006A&A...458..831L},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Ravi_2010MNRAS.408L..99R,
+       author = {{Ravi}, V. and {Hobbs}, G. and {Wickramasinghe}, D. and {Champion}, D.~J. and {Keith}, M. and {Manchester}, R.~N. and {Norris}, R.~P. and {Bray}, J.~D. and {Ferrario}, L. and {Melrose}, D.},
+        title = "{Observations of radio pulses from CU Virginis}",
+      journal = {\mnras},
+     keywords = {radiation mechanisms: non-thermal, stars: individual: CU Virginis, stars: magnetic field, stars: rotation, radio continuum: stars, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - High Energy Astrophysical Phenomena},
+         year = 2010,
+        month = oct,
+       volume = {408},
+       number = {1},
+        pages = {L99-L103},
+          doi = {10.1111/j.1745-3933.2010.00939.x},
+archivePrefix = {arXiv},
+       eprint = {1008.3592},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2010MNRAS.408L..99R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Slee_2008PASA...25...94S,
+       author = {{Slee}, O.~B. and {Wilson}, W. and {Ramsay}, G.},
+        title = "{The Coherent Radio Emission from the RS CVn Binary HR 1099}",
+      journal = {\pasa},
+     keywords = {stars: activity, stars: individual: HR 1099, stars: binary, radio continuum: stars, radiation mechanisms, Astrophysics},
+         year = 2008,
+        month = jan,
+       volume = {25},
+       number = {2},
+        pages = {94-104},
+          doi = {10.1071/AS07045},
+archivePrefix = {arXiv},
+       eprint = {0802.0819},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2008PASA...25...94S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Trigilio_2000A&A...362..281T,
+       author = {{Trigilio}, C. and {Leto}, P. and {Leone}, F. and {Umana}, G. and {Buemi}, C.},
+        title = "{Coherent radio emission from the magnetic chemically peculiar star CU Virginis}",
+      journal = {\aap},
+     keywords = {POLARIZATION, MASERS, STARS: CHEMICALLY PECULIAR, STARS: INDIVIDUAL: CU VIR, STARS: MAGNETIC FIELDS, RADIO CONTINUUM: STARS, Astrophysics},
+         year = 2000,
+        month = oct,
+       volume = {362},
+        pages = {281-288},
+          doi = {10.48550/arXiv.astro-ph/0007097},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0007097},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2000A&A...362..281T},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Zic_2019MNRAS.488..559Z,
+       author = {{Zic}, Andrew and {Stewart}, Adam and {Lenc}, Emil and {Murphy}, Tara and {Lynch}, Christene and {Kaplan}, David L. and {Hotan}, Aidan and {Anderson}, Craig and {Bunton}, John D. and {Chippendale}, Aaron and {Mader}, Stacy and {Phillips}, Chris},
+        title = "{ASKAP detection of periodic and elliptically polarized radio pulses from UV Ceti}",
+      journal = {\mnras},
+     keywords = {polarization, radiation mechanisms: non-thermal, stars: flare, stars: low-mass, stars: magnetic fields, radio continuum: stars, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2019,
+        month = sep,
+       volume = {488},
+       number = {1},
+        pages = {559-571},
+          doi = {10.1093/mnras/stz1684},
+archivePrefix = {arXiv},
+       eprint = {1906.06570},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019MNRAS.488..559Z},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Bloot_2024A&A...682A.170B,
+       author = {{Bloot}, S. and {Callingham}, J.~R. and {Vedantham}, H.~K. and {Kavanagh}, R.~D. and {Pope}, B.~J.~S. and {Climent}, J.~B. and {Guirado}, J.~C. and {Pe{\~n}a-Mo{\~n}ino}, L. and {P{\'e}rez-Torres}, M.},
+        title = "{Phenomenology and periodicity of radio emission from the stellar system AU Microscopii}",
+      journal = {\aap},
+     keywords = {stars: coronae, stars: individual: AU Mic, stars: magnetic field, radio continuum: stars, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Earth and Planetary Astrophysics},
+         year = 2024,
+        month = feb,
+       volume = {682},
+          eid = {A170},
+        pages = {A170},
+          doi = {10.1051/0004-6361/202348065},
+archivePrefix = {arXiv},
+       eprint = {2312.09071},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2024A&A...682A.170B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Callingham_2021NatAs...5.1233C,
+       author = {{Callingham}, J.~R. and {Vedantham}, H.~K. and {Shimwell}, T.~W. and {Pope}, B.~J.~S. and {Davis}, I.~E. and {Best}, P.~N. and {Hardcastle}, M.~J. and {R{\"o}ttgering}, H.~J.~A. and {Sabater}, J. and {Tasse}, C. and {van Weeren}, R.~J. and {Williams}, W.~L. and {Zarka}, P. and {de Gasperin}, F. and {Drabent}, A.},
+        title = "{The population of M dwarfs observed at low radio frequencies}",
+      journal = {Nature Astronomy},
+     keywords = {Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Earth and Planetary Astrophysics, Astrophysics - High Energy Astrophysical Phenomena},
+         year = 2021,
+        month = dec,
+       volume = {5},
+        pages = {1233-1239},
+          doi = {10.1038/s41550-021-01483-0},
+archivePrefix = {arXiv},
+       eprint = {2110.03713},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021NatAs...5.1233C},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{Zarka_2025A&A...695A..95Z,
        author = {{Zarka}, Philippe and {Louis}, Corentin K. and {Zhang}, Jiale and {Tian}, Hui and {Morin}, Julien and {Gao}, Yang},
         title = "{Location and energy of electrons producing the radio bursts from AD Leo observed by FAST in December 2021}",
