--- a/bibfiles/StellarTechniques.bib
+++ b/bibfiles/StellarTechniques.bib
@@ -1,3 +1,63 @@
+@ARTICLE{Lang_2014MNRAS.439.2122L,
+       author = {{Lang}, P. and {Jardine}, M. and {Morin}, J. and {Donati}, J.-F. and {Jeffers}, S. and {Vidotto}, A.~A. and {Fares}, R.},
+        title = "{Modelling the hidden magnetic field of low-mass stars}",
+      journal = {\mnras},
+     keywords = {stars: activity, stars: coronae, stars: low-mass, stars: magnetic field, X-rays: stars, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2014,
+        month = apr,
+       volume = {439},
+       number = {2},
+        pages = {2122-2131},
+          doi = {10.1093/mnras/stu091},
+archivePrefix = {arXiv},
+       eprint = {1401.4545},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2014MNRAS.439.2122L},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Hackman_2024A&A...682A.156H,
+       author = {{Hackman}, T. and {Kochukhov}, O. and {Viviani}, M. and {Warnecke}, J. and {Korpi-Lagg}, M.~J. and {Lehtinen}, J.~J.},
+        title = "{From convective stellar dynamo simulations to Zeeman-Doppler images}",
+      journal = {\aap},
+     keywords = {dynamo, magnetohydrodynamics (MHD), methods: numerical, stars: imaging, stars: magnetic field, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Instrumentation and Methods for Astrophysics},
+         year = 2024,
+        month = feb,
+       volume = {682},
+          eid = {A156},
+        pages = {A156},
+          doi = {10.1051/0004-6361/202347144},
+archivePrefix = {arXiv},
+       eprint = {2306.07838},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2024A&A...682A.156H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Hahlin_2023A&A...675A..91H,
+       author = {{Hahlin}, A. and {Kochukhov}, O. and {Rains}, A.~D. and {Lavail}, A. and {Hatzes}, A. and {Piskunov}, N. and {Reiners}, A. and {Seemann}, U. and {Boldt-Christmas}, L. and {Guenther}, E.~W. and {Heiter}, U. and {Nortmann}, L. and {Yan}, F. and {Shulyak}, D. and {Smoker}, J.~V. and {Rodler}, F. and {Bristow}, P. and {Dorn}, R.~J. and {Jung}, Y. and {Marquart}, T. and {Stempels}, E.},
+        title = "{Determination of small-scale magnetic fields on Sun-like stars in the near-infrared using CRIRES$^{+}$}",
+      journal = {\aap},
+     keywords = {stars: magnetic field, stars: solar-type, techniques: spectroscopic, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2023,
+        month = jul,
+       volume = {675},
+          eid = {A91},
+        pages = {A91},
+          doi = {10.1051/0004-6361/202346314},
+archivePrefix = {arXiv},
+       eprint = {2305.06873},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2023A&A...675A..91H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @PHDTHESIS{Cartledge_1996PhDT.......103C,
        author = {{Cartledge}, Nicholas P.},
         title = "{External and internal magnetohydrostatic models of quiescent solar prominences}",
