--- a/bibfiles/StellarTechniques.bib
+++ b/bibfiles/StellarTechniques.bib
@@ -1,3 +1,23 @@
+@ARTICLE{Stupp_2000MNRAS.311..251S,
+       author = {{Stupp}, A.},
+        title = "{Electron-cyclotron maser observable modes}",
+      journal = {\mnras},
+     keywords = {INSTABILITIES, MASERS, RADIATION MECHANISMS: NON-THERMAL, METHODS: NUMERICAL, SUN: FLARES, SUN: RADIO RADIATION, Astrophysics},
+         year = 2000,
+        month = jan,
+       volume = {311},
+       number = {2},
+        pages = {251-268},
+          doi = {10.1046/j.1365-8711.2000.03035.x},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/9904119},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2000MNRAS.311..251S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{Lang_2014MNRAS.439.2122L,
        author = {{Lang}, P. and {Jardine}, M. and {Morin}, J. and {Donati}, J.-F. and {Jeffers}, S. and {Vidotto}, A.~A. and {Fares}, R.},
         title = "{Modelling the hidden magnetic field of low-mass stars}",
