--- a/bibfiles/Solar.bib
+++ b/bibfiles/Solar.bib
@@ -1,3 +1,23 @@
+@ARTICLE{Asvestari_2024ApJ...971...45A,
+       author = {{Asvestari}, Eleanna and {Temmer}, Manuela and {Caplan}, Ronald M. and {Linker}, Jon A. and {Heinemann}, Stephan G. and {Pinto}, Rui F. and {Henney}, Carl J. and {Arge}, Charles N. and {Owens}, Mathew J. and {Madjarska}, Maria S. and {Pomoell}, Jens and {Hofmeister}, Stefan J. and {Scolini}, Camilla and {Samara}, Evangelia},
+        title = "{Coronal Models and Detection of the Open Magnetic Field}",
+      journal = {\apj},
+     keywords = {Solar corona, Solar magnetic fields, Solar physics, Solar coronal holes, Solar active regions, Magnetohydrodynamics, 1483, 1503, 1476, 1484, 1974, 1964, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2024,
+        month = aug,
+       volume = {971},
+       number = {1},
+          eid = {45},
+        pages = {45},
+          doi = {10.3847/1538-4357/ad5155},
+archivePrefix = {arXiv},
+       eprint = {2311.04024},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2024ApJ...971...45A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 @ARTICLE{Yashiro_2006ApJ...650L.143Y,
        author = {{Yashiro}, S. and {Akiyama}, S. and {Gopalswamy}, N. and {Howard}, R.~A.},
         title = "{Different Power-Law Indices in the Frequency Distributions of Flares with and without Coronal Mass Ejections}",
