--- a/bibfiles/StellarTechniques.bib
+++ b/bibfiles/StellarTechniques.bib
@@ -1,3 +1,24 @@
+@ARTICLE{Yadav_2015ApJ...813L..31Y,
+       author = {{Yadav}, Rakesh K. and {Christensen}, Ulrich R. and {Morin}, Julien and {Gastine}, Thomas and {Reiners}, Ansgar and {Poppenhaeger}, Katja and {Wolk}, Scott J.},
+        title = "{Explaining the Coexistence of Large-scale and Small-scale Magnetic Fields in Fully Convective Stars}",
+      journal = {\apjl},
+     keywords = {dynamo, methods: numerical, stars: interiors, stars: low-mass, stars: magnetic field, Astrophysics - Solar and Stellar Astrophysics, Physics - Fluid Dynamics, Physics - Plasma Physics},
+         year = 2015,
+        month = nov,
+       volume = {813},
+       number = {2},
+          eid = {L31},
+        pages = {L31},
+          doi = {10.1088/2041-8205/813/2/L31},
+archivePrefix = {arXiv},
+       eprint = {1510.05541},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2015ApJ...813L..31Y},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{Stupp_2000MNRAS.311..251S,
        author = {{Stupp}, A.},
         title = "{Electron-cyclotron maser observable modes}",
